# mini_json

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
cmake/: configure_gtest.cmake  download_gtest.cmake  find_gtest.cmake  log_tests_disabled.cmake  log_tests_enabled.cmake  test_module_disabled.cmake  test_module_enabled.cmake  test_runner_disabled.cmake  test_runner_enabled.cmake
lib/: CMakeLists.txt
lib/impl/: json.cpp  string_utils.cpp
lib/public/: json.h  parser_proto.h  string_utils.h
lib/py/: README.md  lex.py  parser.py
lib/src/: json.cpp  json.h
src/: json.h
test/: CMakeLists.txt
test/test_json/: CMakeLists.txt  schema_example.txt  test_json.cpp
test/test_json/resources/: simple.json
